# SalesAgent

./: .gitignore  DOCUMENTATION.md  README.md
voice_backend/: Dockerfile  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
voice_backend/app/: config.py  main.py
voice_backend/app/agent/: feedback.py  fennec_ws.py  inworld_tts.py  llm_client.py  protocol.py  session.py
voice_backend/app/static/: index.html
voice_backend/app/static/assets/: index-Ci-mFf9C.css  index-vrvat-3i.js
voice_backend/tests/: test_main.py
voice_frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
voice_frontend/src/: App.tsx  styles.css
voice_frontend/src/audio/: mic.ts  resample.ts
voice_frontend/src/lib/: ws.ts
voice_frontend/src/worklets/: pcm-player.js  pcm-processor.js
